# binripper

./: .gitignore  README.md
be/: Cargo.toml  README.md  test.txt
be/.cargo/src/: main.rs
be/src/: main.rs
be/src/x86_64_parser/: mod.rs
fe/: package-lock.json  package.json  tailwind.config.cjs
fe/src/: App.tsx  decs.d.ts  index.html  index.tsx
fe/src/input_mgr/: mod.rs
fe/src/pane_mgr/: mod.rs
fe/webpack/: webpack.config.js
fe2/: Cargo.toml
fe2/src/: main.rs
fe2/src/pane_mgr/: mod.rs
fe2/src/window_mgr/: mod.rs
