[package]
name = "binripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

poem = "1.3.58"
poem-openapi = {version="3.0.5", features=["swagger-ui"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.140", features = ["derive"] }